--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <ul>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-        <li><a href="#">lista</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Noticias</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
