Cambios de diseño

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edin huingo ignacio</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Noticias</a></li>
-        </ul>
+        <div class="nav">
+            <div>
+                <a href="">Inicio</a>
+             </div>
+             <div>
+                <a href="">Blog</a>
+             </div>
+             <div>
+                <a href="">Noticias</a>
+             </div>
+        </div>
     </nav>
 </body>
 </html>
